	PR driver/45731 	* gcc.c (asm_options): Correct spec matching --target-help.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@170091 138bc75d-0d04-0410-961f-82ee72b054a4